--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,44 @@
+@import url("https://fonts.googleapis.com/css?family=Quicksand");
+@import url("https://fonts.googleapis.com/css?family=Raleway");
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+}
+
+p {
+  font-family: "Quicksand";
+}
+
+.card-title {
+  font-family: "Raleway";
+}
+
+.card-text {
+  font-family: "Quicksand";
+  font-weight: bold;
+}
+
+/*CUSTOMIZING SCROLLBAR*/
+/* width */
+::-webkit-scrollbar {
+  width: 4px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(207, 207, 207);
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
